--- a/scripts/.env
+++ b/scripts/.env
@@ -1,12 +1,5 @@
-# scripts/.env
-DB_NAME="wordpress"
-DB_USER="wp_user"
-DB_PASS="contraseña_segura"
-DB_HOST="localhost"
 
-WP_URL="practica-wordpress.ddns.net"
-WP_TITLE="IAW"
-WP_ADMIN_USER="admin"
-WP_ADMIN_PASS="admin_password"
-WP_ADMIN_EMAIL="test@test.com"
-WP_LOCALE="es_ES"
+APP_USER="lamp_user"
+APP_PASSWORD="secure_password"
+STATS_USERNAME="admin"
+STATS_PASSWORD="admin_password"
